--- a/cmn-clib/cmn-clib.vcxproj
+++ b/cmn-clib/cmn-clib.vcxproj
@@ -17,7 +17,6 @@
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
-
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -53,25 +52,23 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
-
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
-  <ImportGroup Label="Shared" >
+  <ImportGroup Label="Shared">
   </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
@@ -85,7 +82,6 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
-
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -117,13 +113,16 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalOptions>/source-charset:utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -142,8 +141,49 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="inc\cmnclib\Common.h" />
+    <ClInclude Include="inc\cmnclib\CommonConf.h" />
+    <ClInclude Include="inc\cmnclib\CommonData.h" />
+    <ClInclude Include="inc\cmnclib\CommonDllImport.h" />
+    <ClInclude Include="inc\cmnclib\CommonFile.h" />
+    <ClInclude Include="inc\cmnclib\CommonLog.h" />
+    <ClInclude Include="inc\cmnclib\CommonNet.h" />
+    <ClInclude Include="inc\cmnclib\CommonString.h" />
+    <ClInclude Include="inc\cmnclib\CommonTest.h" />
+    <ClInclude Include="inc\cmnclib\CommonThread.h" />
+    <ClInclude Include="inc\cmnclib\CommonTime.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\CommonConf\CommonConf.c" />
+    <ClCompile Include="src\CommonConf\CommonConfProperty.c" />
+    <ClCompile Include="src\CommonData\CommonDataArg.c" />
+    <ClCompile Include="src\CommonData\CommonDataBuffer.c" />
+    <ClCompile Include="src\CommonData\CommonDataList.c" />
+    <ClCompile Include="src\CommonData\CommonDataRingList.c" />
+    <ClCompile Include="src\CommonData\CommonDataStack.c" />
+    <ClCompile Include="src\CommonData\CommonDataTwowayList.c" />
+    <ClCompile Include="src\CommonFile\CommonFile.c" />
+    <ClCompile Include="src\CommonLog\CommonLog.c" />
+    <ClCompile Include="src\CommonLog\CommonLogEx.c" />
+    <ClCompile Include="src\CommonNet\CommonNetHttp.c" />
+    <ClCompile Include="src\CommonNet\CommonNetSocket.c" />
+    <ClCompile Include="src\CommonString\CommonString.c" />
+    <ClCompile Include="src\CommonString\CommonStringBuffer.c" />
+    <ClCompile Include="src\CommonString\CommonStringList.c" />
+    <ClCompile Include="src\CommonTest\CommonTest.c" />
+    <ClCompile Include="src\CommonThread\CommonThread.c" />
+    <ClCompile Include="src\CommonTime\CommonTime.c" />
+    <ClCompile Include="test\src\test_CommonConf.c" />
+    <ClCompile Include="test\src\test_CommonData.c" />
+    <ClCompile Include="test\src\test_CommonFile.c" />
+    <ClCompile Include="test\src\test_CommonLog.c" />
+    <ClCompile Include="test\src\test_CommonNet.c" />
+    <ClCompile Include="test\src\test_CommonString.c" />
+    <ClCompile Include="test\src\test_CommonThread.c" />
+    <ClCompile Include="test\src\test_CommonTime.c" />
+    <ClCompile Include="test\src\test_main.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
