--- a/cmn-clib/cmn-clib.vcxproj.filters
+++ b/cmn-clib/cmn-clib.vcxproj.filters
@@ -13,5 +13,129 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ソース ファイル\test-src">
+      <UniqueIdentifier>{2e0ac506-2e54-44e2-9e39-26c0e37af4be}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="inc\cmnclib\Common.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonConf.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonData.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonDllImport.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonFile.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonLog.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonNet.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonString.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonTest.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonThread.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="inc\cmnclib\CommonTime.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\CommonConf\CommonConf.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonConf\CommonConfProperty.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonData\CommonDataArg.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonData\CommonDataBuffer.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonData\CommonDataList.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonData\CommonDataRingList.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonData\CommonDataStack.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonData\CommonDataTwowayList.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonFile\CommonFile.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonLog\CommonLog.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonLog\CommonLogEx.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonNet\CommonNetHttp.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonNet\CommonNetSocket.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonString\CommonString.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonString\CommonStringBuffer.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonString\CommonStringList.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonTest\CommonTest.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonThread\CommonThread.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CommonTime\CommonTime.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonConf.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonData.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonFile.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonLog.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonNet.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonString.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonThread.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_CommonTime.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
+    <ClCompile Include="test\src\test_main.c">
+      <Filter>ソース ファイル\test-src</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
