--- a/cmn-clib/cmn-clib.vcxproj.filters
+++ b/cmn-clib/cmn-clib.vcxproj.filters
@@ -137,5 +137,8 @@
     <ClCompile Include="test\src\test_main.c">
       <Filter>ソース ファイル\test-src</Filter>
     </ClCompile>
+    <ClCompile Include="src\CommonLog\CommonLogMessage.c">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
