--- a/cmn-tools/cmn-tools.vcxproj
+++ b/cmn-tools/cmn-tools.vcxproj
@@ -148,7 +148,9 @@
     <ClCompile Include="src\commands\GrepCommand.cpp" />
     <ClCompile Include="src\commands\HelpCommand.cpp" />
     <ClCompile Include="src\commands\SetclipCommand.cpp" />
+    <ClCompile Include="src\commands\TailCommand.cpp" />
     <ClCompile Include="src\commands\Win32SkeletonCommand.cpp" />
+    <ClCompile Include="src\commands\XargsCommand.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\win32\Skeleton.cpp" />
   </ItemGroup>
@@ -159,7 +161,9 @@
     <ClInclude Include="inc\cmn-tools\commands\GrepCommand.hpp" />
     <ClInclude Include="inc\cmn-tools\commands\HelpCommand.hpp" />
     <ClInclude Include="inc\cmn-tools\commands\SetclipCommand.hpp" />
+    <ClInclude Include="inc\cmn-tools\commands\TailCommand.hpp" />
     <ClInclude Include="inc\cmn-tools\commands\Win32SkeletonCommand.hpp" />
+    <ClInclude Include="inc\cmn-tools\commands\XargsCommand.hpp" />
     <ClInclude Include="inc\cmn-tools\win32\Skeleton.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
