--- a/cmn-clib/Makefile
+++ b/cmn-clib/Makefile
@@ -3,7 +3,7 @@ INCDIR := inc
 SRCDIR := src
 LIBDIR := lib
 OUTDIR := build
-LIB_TARGET := $(OUTDIR)/$(PROGNAME).a
+LIB_TARGET := $(OUTDIR)/lib$(PROGNAME).a
 SRCS := $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/CommonConf/*.c) $(wildcard $(SRCDIR)/CommonData/*.c) $(wildcard $(SRCDIR)/CommonFile/*.c) $(wildcard $(SRCDIR)/CommonLog/*.c) $(wildcard $(SRCDIR)/CommonString/*.c) $(wildcard $(SRCDIR)/CommonTest/*.c) $(wildcard $(SRCDIR)/CommonTime/*.c) $(wildcard $(SRCDIR)/CommonNet/*.c) $(wildcard $(SRCDIR)/CommonThread/*.c) $(wildcard $(SRCDIR)/CommonWin32/*.c)
 OBJS := $(addprefix $(OUTDIR)/,$(patsubst %.c,%.o,$(SRCS)))
 TEST_TARGET := $(OUTDIR)/test_main
