--- a/cmn-clib/Makefile
+++ b/cmn-clib/Makefile
@@ -4,7 +4,7 @@ SRCDIR := src
 LIBDIR := lib
 OUTDIR := build
 LIB_TARGET := $(OUTDIR)/lib$(PROGNAME).a
-SRCS := $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/CommonConf/*.c) $(wildcard $(SRCDIR)/CommonData/*.c) $(wildcard $(SRCDIR)/CommonFile/*.c) $(wildcard $(SRCDIR)/CommonLog/*.c) $(wildcard $(SRCDIR)/CommonString/*.c) $(wildcard $(SRCDIR)/CommonTest/*.c) $(wildcard $(SRCDIR)/CommonTime/*.c) $(wildcard $(SRCDIR)/CommonNet/*.c) $(wildcard $(SRCDIR)/CommonThread/*.c) $(wildcard $(SRCDIR)/CommonWin32/*.c)
+SRCS := $(wildcard $(SRCDIR)/*.c) $(wildcard $(SRCDIR)/CmnConf/*.c) $(wildcard $(SRCDIR)/CmnData/*.c) $(wildcard $(SRCDIR)/CmnFile/*.c) $(wildcard $(SRCDIR)/CmnLog/*.c) $(wildcard $(SRCDIR)/CmnString/*.c) $(wildcard $(SRCDIR)/CmnTest/*.c) $(wildcard $(SRCDIR)/CmnTime/*.c) $(wildcard $(SRCDIR)/CmnNet/*.c) $(wildcard $(SRCDIR)/CmnThread/*.c) $(wildcard $(SRCDIR)/CmnWin32/*.c)
 OBJS := $(addprefix $(OUTDIR)/,$(patsubst %.c,%.o,$(SRCS)))
 TEST_TARGET := $(OUTDIR)/test_main
 TEST_SRCS := $(wildcard test/src/*.c)
